ingress/multi-cluster/mci-multi-projects/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio.io/rev: asm-managed-stable
  name: whereami
