ingress/multi-cluster/mci-multi-projects/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whereami
  namespace: whereami
spec:
  selector:
    app: whereami
  ports:
    - port: 80
      targetPort: 8080
