ingress/multi-cluster/mci-multi-projects/virtual_service_ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
  namespace: whereami
spec:
  hosts:
    - "whereami.example.com"
  gateways:
    - asmingress/ingressgateway
  http:
    - route:
        - destination:
            host: whereami
            port:
              number: 80
